smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/expected-shape-id-after-type.smithy
// Syntax error at line 4, column 8: Expected IDENTIFIER but found LPAREN('(') | Model
namespace com.foo

string (Nope)
